--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
         "persistent": true
     },
     "content_scripts": [{
-        "js": ["vend/jquery-3.3.1.min.js", "readMode.js"],
+        "js": ["vend/jquery-3.3.1.min.js"],
         "matches": ["http://*/*", "https://*/*"]
     }],
     "browser_action": {
